--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
   </head>
   <body>
     <div class="container">
-      <img
-        src="assets/vision_pros.jpg"
-        alt="Profile Picture"
-        class="profile-pic"
-        width="200"
-        height="auto"
-      />
-
       <h1>hi, i'm manish!</h1>
 
       <div class="bio">
@@ -32,6 +24,25 @@
       <div class="location">
         🌆 boston · mmanish0881@gmail.com · northeastern (cs + math)
       </div>
+      <img
+        src="assets/vision_pros.jpg"
+        alt="Profile Picture"
+        class="profile-pic"
+        width="200"
+        height="auto"
+      />
+
+      <div>
+        currently i'm fascinated about memgpt, proposed by Letta, for ai systems
+        with infinite context windows. i made a blog post about it and
+        implemented a simple version of Letta
+        <a
+          target="_blank"
+          href="https://medium.com/@mmanish0881/infinite-context-windows-for-llms-how-letta-is-revolutionizing-memory-for-ai-systems-a7d991fb2d16"
+          >here</a
+        >. i'm continuing to improve it in the coming days and am interested in
+        contributing to Letta's OSS.
+      </div>
 
       <svg class="skyline" viewBox="0 0 800 100">
         <path
@@ -42,18 +53,7 @@
         />
       </svg>
 
-      <div>
-        currently i'm reading this research paper on stateful ai systems (<a
-          target="_blank"
-          href="https://arxiv.org/abs/2310.08560"
-          >memgpt</a
-        >). i'm looking to contribute to letta's OSS
-      </div>
-
-      <div>
-        here are some of my recent projects, feel free to click for more
-        details:
-      </div>
+      <div>here are some of my recent projects:</div>
 
       <div class="projects-grid">
         <div class="project-card ninja">
