--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
   </head>
   <body>
     <div class="container">
-      <h1>hi, i'm manish!</h1>
+      <h1>
+        hi, i'm manish! currently i'm working on
+        <a target="_blank" href="https://conquerai.framer.website/">Conquer</a>
+        as part of my venture at the mit venture studio
+        <a target="_blank" href="https://aiforimpact.github.io/">fellowship</a>
+      </h1>
 
       <div class="bio">
-        i'm interested in fintech. last summer i was an MLE intern at iNRI (yc
-        w23), a fintech startup. i built their mutual fund recommendation system
-        you can check out
+        i'm interested in fintech and ai. i'll be joining Altruist as an
+        incoming quant soon. last summer i was an MLE intern at iNRI (yc w23), a
+        fintech startup. i built their flagship mutual fund recommendation
+        system you can check out
         <a
           target="_blank"
           href="https://newsletter.goinri.com/p/inris-smart-investing-tool-for-your"
@@ -56,7 +62,16 @@
       <div>here are some of my recent projects:</div>
 
       <div class="projects-grid">
-        <div class="project-card ninja">
+        <div class="project-card card1">
+          <div class="project-title">FUSE-based Filesystem Driver</div>
+          <div class="project-subtitle">
+            implemented a user-space filesystem using FUSE to mount and manage a
+            custom-designed 1MB disk image. supports file creation, management
+            of files larger than 4KB with dynamic allocation, directory
+            operations, and storage management.
+          </div>
+        </div>
+        <div class="project-card card2">
           <div class="project-title">Fund Recommendation System</div>
           <div class="project-subtitle">
             utilized PCA, K-means, random forests, lambda-MART, and mean
@@ -65,7 +80,7 @@
           </div>
         </div>
 
-        <div class="project-card intern">
+        <div class="project-card card3">
           <div class="project-title">
             SoundScribe (HackMIT 1st place sponsor Track)
           </div>
