--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
     <div class="container">
       <h1>
         hi, i'm manish! currently i'm working on
-        <a target="_blank" href="https://conquerai.framer.website/">Conquer</a>
-        as part of my venture at the mit venture studio
-        <a target="_blank" href="https://aiforimpact.github.io/">fellowship</a>
+        <a target="_blank" href="https://thecontexttree-frontend.vercel.app/"
+          >Branched</a
+        >
+        , a better interface for long term chatbot conversations.
       </h1>
 
       <div class="bio">
-        i'm interested in fintech and ai. i'll be joining Altruist as an
-        incoming quant soon. last summer i was an MLE intern at iNRI (yc w23), a
-        fintech startup. i built their flagship mutual fund recommendation
-        system you can check out
+        i'm interested in ai, fintech, and longevity. this summer i'm a
+        quantitative engineering intern at
+        <a target="_blank" href="https://altruist.com/">altruist</a>. last
+        summer i was an MLE intern at iNRI (yc w23), a fintech startup. i built
+        their flagship mutual fund recommendation system you can check out
         <a
           target="_blank"
           href="https://newsletter.goinri.com/p/inris-smart-investing-tool-for-your"
@@ -28,7 +30,7 @@
       </div>
 
       <div class="location">
-        🌆 boston · mmanish0881@gmail.com · northeastern (cs + math)
+        currently 🌆 LA · mmanish0881@gmail.com · northeastern (cs + math)
       </div>
       <img
         src="assets/vision_pros.jpg"
