--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       <div class="bio">
         i'm interested in ai, fintech, and longevity. this summer i'm a
         quantitative engineering intern at
-        <a target="_blank" href="https://altruist.com/">altruist</a>. last
-        summer i was an MLE intern at iNRI (yc w23), a fintech startup. i built
-        their flagship mutual fund recommendation system you can check out
+        <a target="_blank" href="https://altruist.com/">altruist</a> on the
+        investment solutions and ai labs teams. last summer i was an ml
+        engineering intern at iNRI (yc w23), a fintech startup. i built their
+        flagship mutual fund recommendation system you can check out
         <a
           target="_blank"
           href="https://newsletter.goinri.com/p/inris-smart-investing-tool-for-your"
@@ -33,7 +34,7 @@
         currently 🌆 LA · mmanish0881@gmail.com · northeastern (cs + math)
       </div>
       <img
-        src="assets/vision_pros.jpg"
+        src="assets/profile_pic.png"
         alt="Profile Picture"
         class="profile-pic"
         width="200"
@@ -41,15 +42,20 @@
       />
 
       <div>
-        currently i'm fascinated about memgpt, proposed by Letta, for ai systems
-        with infinite context windows. i made a blog post about it and
-        implemented a simple version of Letta
+        currently i'm fascinated about ways to improve context management in
+        llms. i made a blog post about memgpt, a way for ai systems to have
+        infinite context windows
         <a
           target="_blank"
           href="https://medium.com/@mmanish0881/infinite-context-windows-for-llms-how-letta-is-revolutionizing-memory-for-ai-systems-a7d991fb2d16"
           >here</a
-        >. i'm continuing to improve it in the coming days and am interested in
-        contributing to Letta's OSS.
+        >. i made
+        <a target="_blank" href="https://thecontexttree-frontend.vercel.app/"
+          >Branched</a
+        >
+        to solve context pollution. it lets you structure chats like trees so
+        you can branch off any node, using the context window without cluttering
+        your main conversation.
       </div>
 
       <svg class="skyline" viewBox="0 0 800 100">
