--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       </h1>
 
       <div class="bio">
-        i'm interested in ai, fintech, and longevity. this summer i'm a
-        quantitative engineering intern at
+        i'm interested in ai, fintech, and longevity. i'm currently a
+        quantitative engineer at
         <a target="_blank" href="https://altruist.com/">altruist</a> on the
-        investment solutions and ai labs teams. last summer i was an ml
+        investment solutions and ai labs teams. a while back i was an ml
         engineering intern at iNRI (yc w23), a fintech startup. i built their
         flagship mutual fund recommendation system you can check out
         <a
