modified branched link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>
         hi, i'm manish! currently i'm working on
-        <a target="_blank" href="https://thecontexttree-frontend.vercel.app/"
+        <a target="_blank" href="https://branched.site/"
           >Branched</a
         >
         , a better interface for long term chatbot conversations.
